Show proposal type and add proposal crawling

--- a/currencyii/src/main/res/layout/proposal_row_data.xml
+++ b/currencyii/src/main/res/layout/proposal_row_data.xml
@@ -27,6 +27,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="10px"
+                    android:text="About:" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="10px"
                     android:text="Proposed at:" />
 
                 <TextView
@@ -52,6 +58,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/about_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="text" />
 
                 <TextView
                     android:id="@+id/timestamp_tv"
