--- a/voting/src/main/res/layout/proposal_block.xml
+++ b/voting/src/main/res/layout/proposal_block.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -21,5 +21,11 @@
             android:id="@+id/propDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <ProgressBar
+            android:id="@+id/progressBar3"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="28dp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
