--- a/currencyii/src/main/res/layout/fragment_my_daos.xml
+++ b/currencyii/src/main/res/layout/fragment_my_daos.xml
@@ -24,4 +24,14 @@
             android:layout_height="match_parent" />
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/join_dao_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:contentDescription="Join DAO"
+        android:src="@drawable/ic_add_black_24dp" />
+
 </FrameLayout>
