Add audio file selection, torrent magnet generation, torrent downloading, buffering and audio streaming

--- a/musicdao/src/main/res/layout/fragment_blank.xml
+++ b/musicdao/src/main/res/layout/fragment_blank.xml
@@ -10,6 +10,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/torrentClientInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
         <Button
             android:id="@+id/sendProposalButton"
             android:layout_width="wrap_content"
@@ -20,7 +26,7 @@
             android:id="@+id/torrentButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Download tr" />
+            android:text="Test Torrent stream" />
 
         <Button
             android:id="@+id/shareTrackButton"
