Build fail fix + new indicator positioning

--- a/voting/src/main/res/layout/proposal_block.xml
+++ b/voting/src/main/res/layout/proposal_block.xml
@@ -22,16 +22,14 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
             <TextView
                 android:id="@+id/newIndicator"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="right"
+                android:textColor="#BDBDBD" />
         </LinearLayout>
 
         <TextView
