--- a/currencyii/src/main/res/layout/fragment_bitcoin.xml
+++ b/currencyii/src/main/res/layout/fragment_bitcoin.xml
@@ -18,15 +18,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:text="On this page we will show some information about your loaded bitcoin wallet and provide you some actions to manage it." />
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
                     android:background="@color/light_gray"/>
 
                 <LinearLayout
@@ -56,20 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/light_gray"
-                    android:layout_marginBottom="16dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:text="Bitcoin Network" />
-
-                <TextView
-                    android:id="@+id/chosenNetwork"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:text="N/A" />
+                    android:layout_marginBottom="32dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -86,31 +68,26 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Public Bitcoin Address"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:text="This is your public address you can send bitcoin to, to load money into the wallet." />
+                            android:text="Address"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
                         <TextView
                             android:id="@+id/protocolKey"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                            android:text="N/A" />
+                            android:layout_marginTop="6dp"
+                            android:text="N/A"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                     </LinearLayout>
 
                     <Button
                         android:id="@+id/button_copy_public_address"
+                        style="@style/Widget.AppCompat.Button.Colored"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.AppCompat.Button.Colored"
-                        android:layout_gravity="right"
+                        android:layout_gravity="right|center_vertical"
                         android:layout_marginLeft="12dp"
                         android:text="Copy" />
 
@@ -132,31 +109,66 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Wallet Seed"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:text="This is the wallet seed with your words and creation time, use it to later import the same wallet." />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
                         <TextView
                             android:id="@+id/walletSeed"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                            android:text="N/A" />
+                            android:layout_marginTop="6dp"
+                            android:text="N/A"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                     </LinearLayout>
 
                     <Button
                         android:id="@+id/button_copy_wallet_seed"
+                        style="@style/Widget.AppCompat.Button.Colored"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_gravity="right|center_vertical"
                         android:layout_marginLeft="12dp"
-                        android:layout_gravity="right"
+                        android:text="Copy" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="16dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Public Key"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+                        <TextView
+                            android:id="@+id/yourPublicHex"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:text="N/A"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/button_copy_bitcoin_public_key"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginLeft="12dp"
                         android:text="Copy" />
 
                 </LinearLayout>
@@ -165,20 +177,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:text="Public Key" />
+                    android:text="Network" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_marginBottom="8dp"
-                    android:layout_height="wrap_content" android:text="This is the public key derived from your wallet seed that is used in the DAO protocol to identify you." />
-
-                <TextView
-                    android:id="@+id/yourPublicHex"
+                    android:id="@+id/chosenNetwork"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
                     android:layout_marginBottom="16dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:text="N/A" />
+                    android:text="N/A"
+                    android:textSize="12sp" />
 
             </LinearLayout>
         </ScrollView>
