--- a/voting/src/main/res/layout/proposal_block.xml
+++ b/voting/src/main/res/layout/proposal_block.xml
@@ -17,7 +17,7 @@
 
             <TextView
                 android:id="@+id/propTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="286dp"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:textStyle="bold" />
