--- a/currencyii/src/main/res/layout/fragment_dao_wallet_load_form.xml
+++ b/currencyii/src/main/res/layout/fragment_dao_wallet_load_form.xml
@@ -31,7 +31,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="20dp"
-                        android:text="It looks like you don't have a Bitcoin wallet set up yet. Please do so before you continue."
+                        android:text="Please create or import your Bitcoin wallet now."
                         android:textSize="16sp" />
 
                     <TextView
