Allow for foc_voting_block proposal blocks

--- a/voting/src/main/res/layout/initiate_dialog.xml
+++ b/voting/src/main/res/layout/initiate_dialog.xml
@@ -33,7 +33,7 @@
     </LinearLayout>
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/FOCProp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
