--- a/voting/src/main/res/layout/proposal_block.xml
+++ b/voting/src/main/res/layout/proposal_block.xml
@@ -17,19 +17,21 @@
 
             <TextView
                 android:id="@+id/propTitle"
-                android:layout_width="286dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_weight="2"/>
 
             <TextView
                 android:id="@+id/newIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="right"
-                android:textColor="#BDBDBD" />
+                android:textColor="#BDBDBD"
+                android:layout_weight="1"/>
+
         </LinearLayout>
 
         <TextView
