--- a/voting/src/main/res/layout/proposal_block.xml
+++ b/voting/src/main/res/layout/proposal_block.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
-                android:gravity="right"
+                android:gravity="end"
                 android:textColor="#BDBDBD"/>
 
         </LinearLayout>
