--- a/currencyii/src/main/res/layout/fragment_join_network.xml
+++ b/currencyii/src/main/res/layout/fragment_join_network.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/join_dao_refresh_swiper"
@@ -11,13 +12,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="20px">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/alert_tf"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp" />
 
             <ListView
                 android:id="@+id/list_view"
