--- a/currencyii/src/main/res/layout/fragment_create_sw.xml
+++ b/currencyii/src/main/res/layout/fragment_create_sw.xml
@@ -11,19 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20px">
+        android:padding="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create Shared Bitcoin Wallet"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
             android:id="@+id/alert_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:layout_marginBottom="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,17 +26,20 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Entrance fee (Satoshi)" />
+                android:layout_weight=".50"
+                android:text="Entrance fee" />
 
             <EditText
                 android:id="@+id/entrance_fee_tf"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight=".4"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:hint="Satoshi"
+                android:inputType="numberDecimal"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -50,23 +48,28 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Voting threshold (%):" />
+                android:layout_weight=".50"
+                android:text="Voting threshold" />
 
             <EditText
                 android:id="@+id/voting_threshold_tf"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight=".40"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:hint="Percentage (1-100)"
+                android:inputType="numberDecimal"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <Button
             android:id="@+id/create_sw_wallet_button"
-            android:layout_width="wrap_content"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:text="Create (Genesis block)" />
 
     </LinearLayout>
