Remove create/join dialog, plus button now creates a DAO

--- a/currencyii/src/main/res/layout/fragment_my_daos.xml
+++ b/currencyii/src/main/res/layout/fragment_my_daos.xml
@@ -49,7 +49,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/join_dao_fab"
+        android:id="@+id/create_dao_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
