--- a/currencyii/src/main/res/layout/proposal_row_data.xml
+++ b/currencyii/src/main/res/layout/proposal_row_data.xml
@@ -103,6 +103,8 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
+            android:clickable="false"
+            android:enabled="false"
             android:focusable="false"
             android:text="vote yes"
             android:textColor="@color/colorAccent" />
