--- a/currencyii/src/main/res/navigation/nav_graph.xml
+++ b/currencyii/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/bitcoinFragment">
+    app:startDestination="@id/myDAOsFragment">
 
     <fragment
         android:id="@+id/bitcoinFragment"
@@ -18,19 +18,12 @@
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit" />
         <action
-            android:id="@+id/action_bitcoinFragment_to_daoLoginChoice"
-            app:destination="@id/daoLoginChoice"
+            android:id="@+id/action_bitcoinFragment_to_daoImportOrCreate"
+            app:destination="@id/daoImportOrCreate"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit" />
-        <argument
-            android:name="showDownload"
-            android:defaultValue="false"
-            app:argType="boolean" />
-        <action
-            android:id="@+id/action_bitcoinFragment_to_daoImportOrCreate"
-            app:destination="@id/daoImportOrCreate" />
     </fragment>
     <fragment
         android:id="@+id/daoLoginChoice"
@@ -44,26 +37,26 @@
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit" />
         <action
-            android:id="@+id/action_daoLoginChoice_to_bitcoinFragment"
-            app:destination="@id/bitcoinFragment"
+            android:id="@+id/action_daoLoginChoice_to_myDAOsFragment"
+            app:destination="@id/myDAOsFragment"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit"
-            app:popUpTo="@id/bitcoinFragment"
+            app:popUpTo="@id/myDAOsFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/daoImportOrCreate"
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.DAOCreateFragment">
         <action
-            android:id="@+id/action_daoImportOrCreate_to_bitcoinFragment"
-            app:destination="@id/bitcoinFragment"
+            android:id="@+id/action_daoImportOrCreate_to_myDAOsFragment"
+            app:destination="@id/myDAOsFragment"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit"
-            app:popUpTo="@id/bitcoinFragment"
+            app:popUpTo="@id/myDAOsFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -80,8 +73,7 @@
         android:id="@+id/blockchainDownloadFragment"
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.BlockchainDownloadFragment"
         android:label="Bitcoin Blockchain Download"
-        android:layout="@layout/fragment_blockchain_download"
-        app:startDestination="@id/action_blockchainDownloadFragment_to_bitcoinFragment">
+        android:layout="@layout/fragment_blockchain_download">
         <action
             android:id="@+id/action_blockchainDownloadFragment_to_bitcoinFragment"
             app:destination="@id/bitcoinFragment"
@@ -91,6 +83,19 @@
             app:popExitAnim="@anim/fragment_fade_exit"
             app:popUpTo="@+id/bitcoinFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_blockchainDownloadFragment_to_myDAOsFragment"
+            app:destination="@id/myDAOsFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit"
+            app:popUpTo="@id/myDAOsFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="parent"
+            android:defaultValue="-1"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/mySharedWalletsFragment"
@@ -136,6 +141,10 @@
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.MyDAOsFragment"
         android:label="My DAOs"
         tools:layout="@layout/fragment_my_daos">
+        <argument
+            android:name="showDownload"
+            android:defaultValue="false"
+            app:argType="boolean" />
         <action
             android:id="@+id/action_myDAOsFragment_to_createSWFragment"
             app:destination="@id/createSWFragment"
@@ -152,7 +161,6 @@
             app:popExitAnim="@anim/fragment_fade_exit"
             app:popUpTo="@+id/bitcoinFragment"
             app:popUpToInclusive="true" />
-        />
         <action
             android:id="@+id/action_myDAOsFragment_to_mySharedWalletsFragment"
             app:destination="@id/mySharedWalletsFragment"
@@ -165,6 +173,20 @@
             app:destination="@id/sharedWalletTransaction"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_enter"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_myDAOsFragment_to_blockchainDownloadFragment"
+            app:destination="@id/blockchainDownloadFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_myDAOsFragment_to_daoLoginChoice"
+            app:destination="@id/daoLoginChoice"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit" />
     </fragment>
