--- a/currencyii/src/main/res/navigation/nav_graph.xml
+++ b/currencyii/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,7 @@
     </fragment>
     <fragment
         android:id="@+id/daoLoginChoice"
-        android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.DAOLoginFragment"
+        android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.DAOLoginChoiceFragment"
         android:label="Setup Bitcoin Wallet">
         <action
             android:id="@+id/action_daoLoginChoice_to_daoImportOrCreate"
@@ -185,6 +185,13 @@
         <action
             android:id="@+id/action_myDAOsFragment_to_daoLoginChoice"
             app:destination="@id/daoLoginChoice"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_myDAOsFragment_to_daoImportOrCreate"
+            app:destination="@id/daoImportOrCreate"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
